--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       console.log("Fetching news...");
       var url = 'https://newsapi.org/v2/top-headlines?' +
         'country=us&' +
-        'apiKey=';
+        'apiKey=<YOUR-API-KEY-HERE>';
 
       var req = new Request(url);
 
